--- a/src/Components/Visualizer/Bar/Bar.css
+++ b/src/Components/Visualizer/Bar/Bar.css
@@ -1,8 +1,8 @@
 li {
   list-style-type: none;
   background: grey;
-  text-align: center;
-  margin: 0 auto;
+  /* text-align: center;
+  margin: 0 auto; */
   margin-bottom: 1px;
 }
 
